@@ -10,7 +10,6 @@ import jasmin.core.Parser;
 import java.awt.*;
 import java.net.URL;
 import java.util.*;
-import java.util.List;
 import javax.swing.*;
 import javax.swing.event.*;
 import javax.swing.text.*;
@@ -21,9 +20,11 @@ import javax.swing.text.html.*;
  */
 public class HelpBrowser extends javax.swing.JPanel {
 	
+	private static final long serialVersionUID = 1611148227929564585L;
+	
 	private MainFrame mframe = null;
-	List<URL> history;
-	List<URL> forwardhistory;
+	LinkedList<URL> history;
+	LinkedList<URL> forwardhistory;
 	URL currentURL = null;
 	String[] fontNames = null;
 	
@@ -38,8 +39,8 @@ public class HelpBrowser extends javax.swing.JPanel {
 		initComponents();
 		HtmlPane.setContentType("text/html");
 		HtmlPane.setEditable(false);
-		history = new ArrayList<URL>();
-		forwardhistory = new ArrayList<URL>();
+		history = new LinkedList<URL>();
+		forwardhistory = new LinkedList<URL>();
 		HTMLEditorKit editorKit = createEditorKit();
 		HtmlPane.setEditorKit(editorKit);
 		fontNames = java.awt.GraphicsEnvironment.getLocalGraphicsEnvironment().getAvailableFontFamilyNames();
@@ -229,7 +230,7 @@ public class HelpBrowser extends javax.swing.JPanel {
 	}
 	
 	public void back() {
-		URL url = history.remove(history.size() - 1);
+		URL url = history.removeLast();
 		forwardhistory.add(currentURL);
 		try {
 			HtmlPane.setContentType("text/html");
@@ -242,7 +243,7 @@ public class HelpBrowser extends javax.swing.JPanel {
 	}
 	
 	public void forward() {
-		URL url = forwardhistory.remove(history.size() - 1);
+		URL url = forwardhistory.removeLast();
 		history.add(currentURL);
 		try {
 			HtmlPane.setContentType("text/html");
